@@ -2,12 +2,16 @@ snapserver (0.5.0-beta-1) unstable; urgency=low
 
   * Features
     -Added .default file
-	-Remote control API
+	-Remote control API (JSON)
 	-Android Snapclient with remote control
+	-PCM reader is configured by URI: path, name, codec, sample format, ...
   * Bugfixes
     -TODO
   * General
-    -TODO
+    -SnapCast is renamed to Snapcast, SnapClient => Snapclient, SnapServer => Snapserver
+    -Snapcast protocol:
+     Less messaging: SampleFormat, Command, Ack, String
+    -Removed dependency to boost
 
  -- Johannes Pohl <johannes.pohl@badaix.de>  Tue, 29 Dec 2015 12:00:00 +0200
 
